2013-11-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.3.2 release.

        * NEWS: Added release notes for 2.3.2.

2013-11-05  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        [GStreamer] Remove NATIVE_FULLSCREEN_VIDEO support
        https://bugs.webkit.org/show_bug.cgi?id=123437

        Reviewed by Philippe Normand.

        Removed some dead code as no GStreamer port is using the native
        fullscreen video support.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::enterFullScreenForElement):
        (WebKit::ChromeClient::exitFullScreenForElement):
        * WebCoreSupport/ChromeClientGtk.h: Removed code related to
        GStreamer and NATIVE_FULLSCREEN_VIDEO.

2013-11-04  Manuel Rego Casasnovas  <rego@igalia.com>

        [GTK][WK1] Enable CSS Regions if feature flag is set to TRUE
        https://bugs.webkit.org/show_bug.cgi?id=123739

        Reviewed by Martin Robinson.

        In WK1 CSS Regions were always disabled even if you set the feature flag
        ENABLE_CSS_REGIONS to TRUE. Enabling CSS Regions support in that case.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings): Enable CSS Regions if feautre flag is
        set to TRUE.

2013-10-29  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.3.1 release.

        * NEWS: Added release notes for 2.3.1.

2013-10-28  Bastien Nocera <hadess@hadess.net>

        Name all the GLib timeout sources
        https://bugs.webkit.org/show_bug.cgi?id=123229

        Reviewed by Anders Carlsson.

        Give a name to GLib timeout sources, this is helpful when
        profiling WebKitGTK applications.

2013-10-28  Bastien Nocera <hadess@hadess.net>

        Replace 0 timeouts g_timeout_add() by g_idle_add()
        https://bugs.webkit.org/show_bug.cgi?id=123260

        Reviewed by Carlos Garcia Campos.
