@@ -1,3 +1,14 @@
+2013-11-28  Gustavo Noronha Silva  <gustavo.noronha@collabora.com>
+
+        REGRESSION(r154658): webkit_web_view_get_view_source_mode always returns false
+        https://bugs.webkit.org/show_bug.cgi?id=124954
+
+        Reviewed by Carlos Garcia Campos.
+
+        * tests/testwebview.c: new test to ensure setting and getting source mode work as intended.
+        * webkit/webkitwebview.cpp:
+        (webkit_web_view_get_view_source_mode): actually return the value we query from WebCore.
+
 2013-11-18  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Update NEWS and Versions.m4 for 2.3.2 release.
